--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,10 +1,31 @@
 .App {
-  background-color: #282c34;
+  /* background-color: #282c34; */
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  /* justify-content: space-between; */
   font-size: calc(10px + 2vmin);
-  color: white;
+  /* color: white; */
+}
+
+/* #282c34 */
+
+#app-title {
+  margin: 1em auto;
+}
+
+button {
+  font-size: 1em;
+  padding: 0.4em 0.5em;
+  border-radius: 0.2em;
+  cursor: pointer;
+}
+
+footer {
+  border-top: 1px solid #434956;
+  width: 100%;
+  margin-top: auto;
+  padding: 0.4em;
+  text-align: center;
 }
