--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
+@import "~react-image-gallery/styles/css/image-gallery.css";
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  outline: 1px solid orange;
+  /* outline: 1px solid orange; */
 }
 
 body {
