--- a/src/components/MediaContent.css
+++ b/src/components/MediaContent.css
@@ -60,15 +60,67 @@ button#load_btn {
     text-align: center;
 }
 
-.wrapper {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background: rgba(0, 0, 0, 0.9);
-	z-index: 1000;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+#photo-author {
+    color: #fff;
+    text-decoration: none;
+}
+
+#photo-author:hover {
+    text-decoration: underline;
+}
+
+
+/* Content Author description style */
+.svg-icon {
+    height: 28px;
+    width: 28px;
+    display: block;
+    position: static;
+}
+
+#user-icon {
+    margin-right: 0.4em;
+    height: 16px;
+    width: 16px;
+    cursor: initial;
+}
+
+#user-icon:hover {
+    color: #fff;
+}
+
+#enlarge-icon {
+    position: absolute;
+    right: 24px;
+}
+
+#enlarge-icon svg {
+    height: 16px;
+    width: 16px;
+    margin-top: 4px;
+}
+
+@media only screen and (min-width:480px) {
+    #user-icon {
+        height: 24px;
+        width: 24px;
+    }
+    
+    #enlarge-icon svg{
+        height: 22px;
+        width: 22px;
+        margin-top: 4px;
+    }
+}
+
+@media only screen and (min-width:768px) {
+    #user-icon {
+        height: 30px;
+        width: 30px;
+    }
+    
+    #enlarge-icon svg {
+        height: 26px;
+        width: 26px;
+    }
 }
