add loading spinner, footer content and styles

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,15 +1,14 @@
 .App {
   /* background-color: #282c34; */
+  /* justify-content: space-between; */
+  /* color: white; */
+  /* #282c34 */
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* justify-content: space-between; */
   font-size: calc(10px + 1.75vmin);
-  /* color: white; */
 }
-
-/* #282c34 */
 
 #app-title {
   margin: 1em auto;
@@ -18,14 +17,55 @@
 button {
   font-size: 1em;
   padding: 0.4em 0.5em;
-  border-radius: 0.2em;
+  border-radius: 0.25em;
+  border: 2px solid transparent;
   cursor: pointer;
+  background-color: #1a73e8;
+  color: #fff;
 }
 
 footer {
-  border-top: 1px solid #434956;
+  border-top: 1px solid #595c5f;
   width: 100%;
   margin-top: auto;
-  padding: 0.4em;
+  font-size: 0.75em;
+}
+
+footer #footer-wrapper {
+  width: 80vw;
+  /* min-width: 350px; */
+  margin: 0.5em auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+footer p {
   text-align: center;
+}
+
+#footer-wrapper #author a, #footer-wrapper #author a:visited {
+  color: inherit;
+  text-decoration: none;
+}
+
+#footer-wrapper #author a:hover {
+  text-decoration: underline;
+}
+
+
+#footer-wrapper #pexels-logo {
+  height: 1.25em;
+  vertical-align: bottom;
+  margin-left: 0.2em;
+}
+
+#footer-wrapper #pexels-logo:hover {
+  outline: 1px solid #595c5f;
+}
+
+#footer-wrapper #footer-heart {
+  color: #e25555;
+  font-size: 1.5em;
+  vertical-align: middle;
 }
