add spinner to gallery view images, add back to top button

--- a/src/components/Gallery.css
+++ b/src/components/Gallery.css
@@ -45,6 +45,10 @@
 
 .image-gallery-slide .image-gallery-image {
     object-fit: scale-down;
+    /* background: red; */
+    background-image: url(../assets/spinner.svg);
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .image-gallery-slide-wrapper,
