--- a/src/components/App.css
+++ b/src/components/App.css
@@ -56,7 +56,7 @@ footer p {
 
 #footer-wrapper #pexels-logo {
   height: 1.25em;
-  vertical-align: bottom;
+  vertical-align: middle;
   margin-left: 0.2em;
 }
 
@@ -68,4 +68,16 @@ footer p {
   color: #e25555;
   font-size: 1.5em;
   vertical-align: middle;
+}
+
+#scroll-btn {
+  position: fixed;
+  bottom: 3.5em;
+  right: 1.5em;
+  border-radius: 50%;
+  padding: 0.75em;
+}
+
+#scroll-btn svg {
+  display: block;
 }
