--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -8,6 +8,8 @@ form {
 }
 
 input[type="search"] {
+    border: 2px solid black;
+    border-right-width: 1px;
     font-size: 1em;
     padding: 0.4em 0.5em;
     border-radius: 0.2em 0 0 0.2em;
